# ElectronOptics

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/eigen/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeLists.txt
lib/glm/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
lib/tetgen/: CMakeLists.txt  tetgen.h
src/: _simulator.cpp  _simulator.hpp  clickRayCaster.cpp  clickRayCaster.hpp  main._cpp  main.cpp  main2._cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp
src/input/: argumentParser.cpp  argumentParser.hpp
src/py/: 2dFDMSolver.py  2dFieldSim.py  cFieldVis.py  cPathVis.py  electronTracer.py
src/shaders/: beamFragmentShader.glsl  beamVertexShader.glsl  modelFragmentShader.glsl  modelVertexShader.glsl
src/simulation/: simulator.cpp  simulator.hpp
src/simulation/data/: electrodeMesh.cpp  electrodeMesh.hpp  linear3d.hpp  potentialMesh.cpp  potentialMesh.hpp  potentialMeshOcttree.cpp  potentialMeshOcttree.hpp  vec3d.hpp
src/simulation/solver/: femSolver.cpp  femSolver.hpp
src/simulation/tracer/: tracer.cpp  tracer.hpp
